refactor: update generics and enhance null safety in various classes